test/testdata/classes/methods/init/missing_2_args_error.lox
class Foo {
  init(a, b) {
    print a + b;
  }
}

Foo(); // error: Foo.init() accepts 2 arguments but 0 were given
